tests/grammar/snapshots/r#mod__grammar__alpha034__array-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"[1, 2\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Array(
                                    [
                                        (
                                            Number(
                                                (
                                                    1.0,
                                                    1..2,
                                                ),
                                            ),
                                            1..2,
                                        ),
                                        (
                                            Number(
                                                (
                                                    2.0,
                                                    4..5,
                                                ),
                                            ),
                                            4..5,
                                        ),
                                    ],
                                ),
                                0..5,
                            ),
                        ),
                        0..5,
                    ),
                ),
                0..5,
            ),
        ],
    ),
    [
        found end of input at 5..5 expected '"."', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', '","', or '"]"',
    ],
)
