tests/grammar/snapshots/r#mod__grammar__alpha034__command-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(&tokenize(\"$echo \\\"Hello, {name}!\\\"$\"))"
---
[
    (
        Statement(
            (
                Expression(
                    (
                        Command(
                            [],
                            [
                                (
                                    Text(
                                        "echo",
                                    ),
                                    1..5,
                                ),
                                (
                                    Text(
                                        "\"",
                                    ),
                                    6..7,
                                ),
                                (
                                    Text(
                                        "Hello",
                                    ),
                                    7..12,
                                ),
                                (
                                    Text(
                                        ",",
                                    ),
                                    12..13,
                                ),
                                (
                                    Expression(
                                        (
                                            Var(
                                                (
                                                    "name",
                                                    15..19,
                                                ),
                                            ),
                                            15..19,
                                        ),
                                    ),
                                    14..20,
                                ),
                                (
                                    Text(
                                        "!",
                                    ),
                                    20..21,
                                ),
                                (
                                    Text(
                                        "\"",
                                    ),
                                    21..22,
                                ),
                            ],
                            None,
                        ),
                        0..23,
                    ),
                ),
                0..23,
            ),
        ),
        0..23,
    ),
]
