tests/grammar/snapshots/r#mod__grammar__alpha034__command-4.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"$command -$\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            0..1,
                                        ),
                                        (
                                            Text(
                                                "command",
                                            ),
                                            1..8,
                                        ),
                                        (
                                            CommandOption(
                                                "-",
                                            ),
                                            9..10,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            10..11,
                                        ),
                                    ],
                                    None,
                                ),
                                0..11,
                            ),
                        ),
                        0..11,
                    ),
                ),
                0..11,
            ),
        ],
    ),
    [],
)
