tests/grammar/snapshots/r#mod__grammar__alpha034__command-5.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"$command --arg1 -v\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [],
                                    [
                                        (
                                            Text(
                                                "command",
                                            ),
                                            1..8,
                                        ),
                                        (
                                            CommandOption(
                                                "--arg1",
                                            ),
                                            9..15,
                                        ),
                                        (
                                            CommandOption(
                                                "-v",
                                            ),
                                            16..18,
                                        ),
                                    ],
                                    None,
                                ),
                                0..18,
                            ),
                        ),
                        0..18,
                    ),
                ),
                0..18,
            ),
        ],
    ),
    [
        found end of input at 18..18 expected '"\\"', '"-"', '"{"', or '"$"',
    ],
)
