tests/grammar/snapshots/r#mod__grammar__alpha034__command-6.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(&tokenize(\"$command {unclosed\"))"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [],
                                    [
                                        (
                                            Text(
                                                "$",
                                            ),
                                            0..1,
                                        ),
                                        (
                                            Text(
                                                "command ",
                                            ),
                                            1..9,
                                        ),
                                        (
                                            Expression(
                                                (
                                                    Var(
                                                        (
                                                            "unclosed",
                                                            10..18,
                                                        ),
                                                    ),
                                                    10..18,
                                                ),
                                            ),
                                            9..18,
                                        ),
                                        (
                                            Text(
                                                "$",
                                            ),
                                            18..18,
                                        ),
                                    ],
                                    None,
                                ),
                                0..18,
                            ),
                        ),
                        0..18,
                    ),
                ),
                0..18,
            ),
        ],
    ),
    [
        found end of input at 18..18 expected '"("', '"as"', '"is"', '"*"', '"/"', '"%"', '"+"', '"-"', '">="', '">"', '"<="', '"<"', '"=="', '"!="', '"and"', '"or"', '".."', '"then"', or '"}"',
        found end of input at 18..18 expected something else, '"}"', any, '"\\"', '"-"', '"{"', or '"$"',
    ],
)
